--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 
 <script>
     function validateLogin(){
+        ddd
         let message = document.getElementById("message");
         message.innerHTML = "";
         let valid=true;
