--- a/templates/trivia_game.html
+++ b/templates/trivia_game.html
@@ -16,7 +16,7 @@
         {% if trivia_display == 'start' %}
 
             <div class="game_info">
-            {{message}}
+            <!-- {{message}} -->
                 <h1>Trivia Game</h1>
                 <p>Welcome to the trivia game!</p> 
                 <p>You earn 2 points for each correct answer, but be careful- three mistakes and you're out. </p>
