--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,7 +22,7 @@
     <div id="" class="content">
         <div id="UserManagementHTML" class="inputcoul">
         {% if action == 'Display' %}
-        <h3>User Management</h3>
+        <h3 style="color:black">User Management</h3>
         <form action="/adminaction"form method="POST">
         <div class="adminactions">
             <input type="submit"  name="action" value="Display" class="navsettingtext">
@@ -65,7 +65,7 @@
     {% endif %}
 
     {% if action == 'Edit' %}
-    <h3>Edit User</h3>
+    <h3 style="color:black">Edit User</h3>
     <form action="/adminedit" method="POST">
         <div class="inputrow">
             <div class="inputscoulmn">
