--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,8 @@
             {% endblock %}
             {% block war_game %}
             {% endblock %}
+            {% block snake_game_base %}
+            {% endblock %}
             {% block admin %}
             {% endblock %}
             {% block games %}
