--- a/static/admin.css
+++ b/static/admin.css
@@ -48,6 +48,17 @@
 }
 
 .navsettingtext {
+    padding: 5px;
+    background-color: #4c57af;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
+
+/* .navsettingtext {
     font-family:Arial, Helvetica, sans-serif;
     border: none;
     font-size:smaller;
@@ -63,7 +74,8 @@
         width: fit-content;
         box-shadow: 1px 1px gray ;
     }
-}
+} */
+
 h3 {
     margin:0;
 }
@@ -76,7 +88,7 @@ h3 {
     font-size: smaller;
     border-radius: 30px;
     background-color: black;
-    color:white;
+    color: black;
     text-align:center;
     padding-top: 3%;
 }
@@ -127,6 +139,7 @@ h3 {
     font-weight: bold;
     font-size: smaller;
     margin-top: 20px;
+    color: black;
 }
 
 .inputscoulmn {
@@ -150,11 +163,14 @@ h3 {
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #4f4d4d91;
     text-align: left;
+    padding: 5px;
+    color: black;
 }
 
 td {
     border-bottom: 1px solid #ddd;
+    color: black;
 }
 
