--- a/templates/login.html
+++ b/templates/login.html
@@ -27,11 +27,11 @@
     <form id="loginForm" action="/login" method="POST" >
     <input onchange="this.style.backgroundColor='field';"  type="text" class="input" name="username" id="username" placeholder="Username">
     <input onchange="this.style.backgroundColor='field';" type="password" class="input" name="password" id="password" placeholder="Password">
-</form> 
-<button class="botton" onclick="validateLogin()">Sign in</button>
+    </form> 
+    <button class="login-in-button" onclick="validateLogin()">Sign in</button>
 
     <form action="/signup" method="POST">
-        <input type = "submit" class="botton" value = "Sign up">
+        <input type = "submit" class="login-up-button" value = "Sign up">
     </form>
     
     <a href="/reset_my_password">Forgot my password</a>
